# fractalinstaller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: child_process_handler.h  create_fonts.cpp  create_fonts.h  download_file.cpp  download_file.h  grab_folder_dialog.cpp  grab_folder_dialog.h  installer_state.cpp  installer_state.h  load_texture.cpp  load_texture.h  main.cpp  stb_image.h
source/fonts/: nmsfont.h  segoe_ui.h
source/images/: background.h
source/states/: depotdownloader.cpp  depotdownloader.h  dodownloadfractal.cpp  dodownloadfractal.h  downloadrenms.cpp  downloadrenms.h  finaliseinstall.cpp  finaliseinstall.h  finished.cpp  finished.h  promptuseexistinginstall.cpp  promptuseexistinginstall.h  start.cpp  start.h  steamcredsinput.cpp  steamcredsinput.h
